--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           <i class="social-icon fab fa-twitter"></i>
           <i class="social-icon fab fa-instagram"></i>
           <i class="social-icon fab fa-github-square"></i>
-          <p>© Copyright 2018 TinDog</p>
+        <p>© Copyright 2018 TinDog</p><P>Created By MD MAHADI HASAN </P>
       </footer>
     </body>
   </html>
